--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Netflix clone built by ViratPod. Stream-style UI with hero section, trending slider, cards, and interactive FAQ — responsive and clean frontend project."
+    />
+    <meta
+      name="keywords"
+      content="Netflix clone, Netflix UI clone, frontend project, HTML CSS JavaScript project, Netflix landing page clone"
+    />
+    <meta name="author" content="ViratPod" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Netflix Clone | By ViratPod" />
+    <meta
+      property="og:description"
+      content="A clean, responsive Netflix landing page clone built using HTML, CSS, and JavaScript."
+    />
+    <meta property="og:type" content="website" />
+    
     <title>Netflix | By ViratPod</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="main">
       <nav>
-        <span
-          ><img
-            src="/Clone Websites/Netflix/assets/netflix-logo/logo.svg"
-            width="53"
-        /></span>
+        <span><img src="./assets/netflix-logo/logo.svg" width="53" /></span>
         <div class="flex-btn">
           <div class="lang-wrapper">
             <button class="btn lang-sm" id="langBtn" aria-expanded="false">
@@ -56,43 +69,43 @@
           <div id="slider" class="slider">
             <div class="item">
               <span class="rank">1</span>
-              <img src="/Clone Websites/Netflix/assets/img/image1.webp" />
+              <img src="./assets/img/image1.webp" />
             </div>
             <div class="item">
               <span class="rank">2</span>
-              <img src="/Clone Websites/Netflix/assets/img/image2.webp" />
+              <img src="./assets/img/image2.webp" />
             </div>
             <div class="item">
               <span class="rank">3</span>
-              <img src="/Clone Websites/Netflix/assets/img/image3.webp" />
+              <img src="./assets/img/image3.webp" />
             </div>
             <div class="item">
               <span class="rank">4</span>
-              <img src="/Clone Websites/Netflix/assets/img/image4.webp" />
+              <img src="./assets/img/image4.webp" />
             </div>
             <div class="item">
               <span class="rank">5</span>
-              <img src="/Clone Websites/Netflix/assets/img/image5.webp" />
+              <img src="./assets/img/image5.webp" />
             </div>
             <div class="item">
               <span class="rank">6</span>
-              <img src="/Clone Websites/Netflix/assets/img/image6.webp" />
+              <img src="./assets/img/image6.webp" />
             </div>
             <div class="item">
               <span class="rank">7</span>
-              <img src="/Clone Websites/Netflix/assets/img/image7.webp" />
+              <img src="./assets/img/image7.webp" />
             </div>
             <div class="item">
               <span class="rank">8</span>
-              <img src="/Clone Websites/Netflix/assets/img/image8.webp" />
+              <img src="./assets/img/image8.webp" />
             </div>
             <div class="item">
               <span class="rank">9</span>
-              <img src="/Clone Websites/Netflix/assets/img/image9.webp" />
+              <img src="./assets/img/image9.webp" />
             </div>
             <div class="item">
               <span class="rank">10</span>
-              <img src="/Clone Websites/Netflix/assets/img/image10.webp" />
+              <img src="./assets/img/image10.webp" />
             </div>
           </div>
 
@@ -113,10 +126,7 @@
                 </p>
               </div>
               <div class="card-icon">
-                <object
-                  data="/Clone Websites/Netflix/assets/netflix-logo/tv.svg"
-                  type=""
-                ></object>
+                <object data="./assets/netflix-logo/tv.svg" type=""></object>
               </div>
             </div>
 
@@ -130,7 +140,7 @@
               </div>
               <div class="card-icon">
                 <object
-                  data="/Clone Websites/Netflix/assets/netflix-logo/download_icon.svg"
+                  data="./assets/netflix-logo/download_icon.svg"
                   type=""
                 ></object>
               </div>
@@ -146,7 +156,7 @@
               </div>
               <div class="card-icon">
                 <object
-                  data="/Clone Websites/Netflix/assets/netflix-logo/watch_icon.svg"
+                  data="./assets/netflix-logo/watch_icon.svg"
                   type=""
                 ></object>
               </div>
@@ -159,7 +169,7 @@
               </div>
               <div class="card-icon">
                 <object
-                  data="/Clone Websites/Netflix/assets/netflix-logo/anyone_icon.svg"
+                  data="./assets/netflix-logo/anyone_icon.svg"
                   type=""
                 ></object>
               </div>
@@ -172,9 +182,7 @@
         <h2 class="titles">Frequently Asked Questions</h2>
         <div class="faq-box">
           <span>What is Netflix</span>
-          <object
-            data="/Clone Websites/Netflix/assets/netflix-logo/plus_icon.svg"
-          ></object>
+          <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
         <div class="faq-answer">
           <p>
@@ -190,9 +198,7 @@
         </div>
         <div class="faq-box">
           <span>How much does Netflix cost?</span>
-          <object
-            data="/Clone Websites/Netflix/assets/netflix-logo/plus_icon.svg"
-          ></object>
+          <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
         <div class="faq-answer">
           <p>
@@ -203,9 +209,7 @@
         </div>
         <div class="faq-box">
           <span>Where can I watch?</span>
-          <object
-            data="/Clone Websites/Netflix/assets/netflix-logo/plus_icon.svg"
-          ></object>
+          <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
         <div class="faq-answer">
           <p>
@@ -223,9 +227,7 @@
         </div>
         <div class="faq-box">
           <span>How do I cancel?</span>
-          <object
-            data="/Clone Websites/Netflix/assets/netflix-logo/plus_icon.svg"
-          ></object>
+          <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
         <div class="faq-answer">
           <p>
@@ -236,9 +238,7 @@
         </div>
         <div class="faq-box">
           <span>What can I watch on Netflix?</span>
-          <object
-            data="/Clone Websites/Netflix/assets/netflix-logo/plus_icon.svg"
-          ></object>
+          <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
         <div class="faq-answer">
           <p>
