--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:type" content="website" />
     
     <title>Netflix | By ViratPod</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/netflix-logo/Netflix_logo.png">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
