Update FAQ box to be active for Netflix cost question

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             new to discover, and new TV shows and movies are added every week!
           </p>
         </div>
-        <div class="faq-box">
+        <div class="faq-box active">
           <span>How much does Netflix cost?</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
