--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
       <section class="faq">
         <h2 class="titles">Frequently Asked Questions</h2>
-        <div class="faq-box active">
+        <div class="faq-box">
           <span>What is Netflix</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
@@ -197,7 +197,7 @@
             new to discover, and new TV shows and movies are added every week!
           </p>
         </div>
-        <div class="faq-box active">
+        <div class="faq-box">
           <span>How much does Netflix cost?</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
@@ -208,7 +208,7 @@
             ₹149 to ₹649/month.
           </p>
         </div>
-        <div class="faq-box active">
+        <div class="faq-box">
           <span>Where can I watch?</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
@@ -226,7 +226,7 @@
             internet connection. Take Netflix with you anywhere.
           </p>
         </div>
-        <div class="faq-box active">
+        <div class="faq-box">
           <span>How do I cancel?</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
@@ -237,7 +237,7 @@
             account anytime.
           </p>
         </div>
-        <div class="faq-box active">
+        <div class="faq-box">
           <span>What can I watch on Netflix?</span>
           <object data="./assets/netflix-logo/plus_icon.svg"></object>
         </div>
