Correct capitalization in og:description meta tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Netflix Clone | By ViratPod" />
     <meta
       property="og:description"
-      content="A clean, responsive Netflix landing page clone built using HTML, CSS, and JavaScript."
+      content="A clean, responsive Netflix landing page clone Built using HTML, CSS, and JavaScript."
     />
     <meta property="og:type" content="website" />
     
